added navbar and icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,15 @@
     color: #9575CD;
 }
 
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background-color: #512DA8;
+}
+
 .footer {
     background-color: #D1C4E9;
     margin: 0px auto;
@@ -45,7 +54,7 @@
     color: floralwhite;
 }
 
-.address {
+address {
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
