--- a/css/styles.css
+++ b/css/styles.css
@@ -91,3 +91,9 @@ address {
     padding-top: 7%;
     padding-bottom: 7%;
 }
+
+#carouselButton {
+    right: 0px;
+    bottom: 0px;
+    position: absolute;
+}
